# principia

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  publish.yml
examples/: dopri5_orbit.rs  gravity_field.rs  local_frames.rs  stm_propagation.rs  two_body_rk4.rs
src/: error.rs  lib.rs
src/covariance/: mod.rs
src/frames/: mod.rs
src/gravity/: mod.rs
src/integrators/: dop853.rs  dopri5.rs  mod.rs  rk4.rs
src/models/: j2.rs  mod.rs  two_body.rs
src/propagation/: mod.rs
src/state/: mod.rs
src/variational/: mod.rs
tests/: two_body_rk4.rs
