[package]
name = "principia"
version = "0.2.1"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Typed Newtonian numerical dynamics: state propagation, acceleration models, RK4/DOPRI5/DOP853 integrators, variational equations, STM, covariance, and gravity-field kernels."
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Siderust/principia"
keywords = ["astrodynamics", "propagation", "integrator", "gravity", "science"]
categories = ["science", "mathematics", "aerospace"]
rust-version = "1.82"

[features]
default = ["std"]
std = ["qtty/std"]
alloc = ["qtty/alloc"]
serde = ["dep:serde", "qtty/serde", "affn/serde", "tempoch/serde"]
# Optional convenience aliases for astronomical frame markers from `affn`.
# Does NOT pull in Earth/Sun/Moon constants, ephemerides, or atmosphere policy.
astro = ["affn/astro"]

[dependencies]
qtty = { version = "0.8", default-features = false, features = ["satellite"] }
affn = { version = "0.8", default-features = false }
tempoch = { version = "0.6", default-features = false }
thiserror = { version = "2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
approx = "0.5"
serde_json = "1"

[[example]]
name = "two_body_rk4"
required-features = ["std"]

[[example]]
name = "dopri5_orbit"
required-features = ["std"]

[[example]]
name = "local_frames"
required-features = ["std"]

[[example]]
name = "gravity_field"
required-features = ["std"]

[[example]]
name = "stm_propagation"
required-features = ["std"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
